--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ h1 {
     color: #0a6cb8;
 }
 
+h1.header.green {
+    color: #209220;
+}
+
 h2 {
     font-family: montserrat, sans-serif;
     font-weight: 700;
@@ -73,7 +77,12 @@ a {
     text-decoration: none;
 }
 
-
+.simple-span {
+    background-image: url(images/green-stroke.svg);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: contain;
+    }
 
 p {
     padding-top: 0rem;
