--- a/style.css
+++ b/style.css
@@ -151,10 +151,9 @@ p {
     justify-items: center;
     grid-template-rows: 1fr;
     grid-template-areas: 
-    "a"
-    
-    ;
+    "a";
     width: 100%;
+    padding: 3rem 0 0 0;
     
   
 }
@@ -558,8 +557,21 @@ p.provided-text {
     align-items: center;
     align-content: center;
     background-color: #2638C4;
-    padding: 2rem 0 2rem 0;
+    padding: 2rem 0 4rem 0;
   
+}
+
+.nav-container {
+    background-color: #2638C4;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    
+    padding: 1.2rem;
+    margin-bottom: 0;
+  
+  
+   
 }
 
 .footer-grid {
