--- a/style.css
+++ b/style.css
@@ -607,6 +607,7 @@ p.provided-text {
     animation: fadeInAnimate ease 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+    z-index: 9;
     
     
 }
