--- a/style.css
+++ b/style.css
@@ -266,7 +266,11 @@ p {
     color: white;
 }
 
-
+.about-content.footer {
+    color: white;
+    text-align: center;
+    padding: 0 1rem 0 1rem;
+}
 
 .how-it-works-grid {
     display: grid;
@@ -645,7 +649,7 @@ nav {
    "a b c"
    "d e f"
    "g h i";
-    
+    padding-top: 2rem;
     width: 100%;
     
 }
